--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="ax.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <link rel="stylesheet" href="css/ax.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="main.js"></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Document</title>
   </head>
   <header><header class="page-header">
-  <a href="index.html"><img class="logo" src="images/logo.png" </a></h1>
+  <a href="main.html"><img class="logo" src="images/logo.png" </a></h1>
   <nav>
   <ul class="main-nav">
   <li><a href="#action1">Profile</a></li>
@@ -32,7 +33,7 @@
 
 
   <div class="flex">
-  <p class="side-txt">帝京大学 理工学部 情報電子工学科4年の吉岡諒真です。
+  <p class="side-txt">帝京大学 理工学部 情報電子工学科3年の吉岡諒真です。
   <br> 現在エンジニアに向けて日々勉強中。</p>
 
   <p class="side-picture"><img src="images/DSC_2279.JPG"alt="証明写真" width="285"  height="427"></p>
@@ -52,7 +53,7 @@
   <section>
   <h2><span id="action4">Contact</span></h2>
   <p>吉岡 諒真 (ヨシオカリョウマ)</p>
-  <p>帝京大学理工学部情報電子工学科4年</p>
+  <p>帝京大学理工学部情報電子工学科3年</p>
   <p>E-mail：213106jg@stu.teikyo-u.ac.jp</p>
   <p>住所：〒320-0051</p>
   <p>栃木県宇都宮市上戸町536-3 メープルハウスベルA202号室</p>
@@ -60,8 +61,7 @@
 
   <footer>
   <div class="wrapper">
-  <p><small>&copy; 
-2024 Ryoma Yoshioka</small></p>
+  <p><small>&copy; 2024 Ryoma Yoshioka</small></p>
   </div>
   </footer>
   </body>
